# CodexMonitor

./: .cursorrules  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .gitleaks.toml  .golangci.yml  .pre-commit-config.yaml  .secrets.baseline  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  UPSTREAM_SYNC_PHASE_PLAN.md  biome.json  docker-compose.dev.yml  index.html  package-lock.json  package.json  playwright.config.ts  playwright.external.config.ts  pyproject.toml  tsconfig.ci.json  tsconfig.json  tsconfig.node.json  vite.config.ts  测试深度加强治理Plan.md
.devcontainer/: devcontainer.json
.github/: actionlint.yaml  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
.kubelinter/: config.yaml
.storybook/: main.js  preview.js
config/: coverage-gate-baseline.json  env.runtime-allowlist.json  env.schema.json
docs/: CNAME  README.md  app-server-events.md  change-routing-guide.md  codebase-map.md  codex-0.103-upgrade-impact-assessment.md  codexmonitor-upstream-maintenance-problem.md  critical-flows.md  cursor-control-plane.md  index.html  mobile-ios-cloudflare-blueprint.md  repo-deep-map.md  styles.css  upstream-patch-inventory.md  upstream-sync-runbook.md
e2e/: a11y.spec.ts  approval-interrupt.spec.ts  external.spec.ts  interaction-sweep.spec.ts  smoke.spec.ts  workspace-lifecycle.spec.ts  worktree-flow.spec.ts
repo-overview/: .gitignore  pnpm-lock.yaml
scripts/: build_run_ios_device.sh  check-4w-no-false-green.mjs  check-compat-optin-log.mjs  check-compat-option-log.mjs  check-critical-path-logging.mjs  check-env-count.mjs  (+31 more)
(+677 files in other folders)
